Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-166

MDR assert of wire dat for ATTR_BY_FID case

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • Lustre 2.0.0, Lustre 2.1.0
    • None
    • 3
    • 5069

      mdt_getattr_name_lock has this code:

      if (!info->mti_cross_ref) {
      /*

      • XXX: Check for "namelen == 0" is for getattr by fid
      • (OBD_CONNECT_ATTRFID), otherwise do not allow empty name,
      • that is the name must contain at least one character and
      • the terminating '\0'
        */
        if (namelen == 0) {
        reqbody = req_capsule_client_get(info->mti_pill,
        &RMF_MDT_BODY);
        LASSERT(fid_is_sane(&reqbody->fid2));

      This LASSERT is wrong because it depends on correctness of the client-supplied data.
      Should be replaced with EPROTO error.

            yong.fan nasf (Inactive)
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: