LU-166 NOT assert wire data from client for getattr-by-fid

Change-Id: I44e96275ab53b8c7d301824487541b67b3c80cb8
Signed-off-by: nasf <yong.fan@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/367
Tested-by: Hudson
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: wangdi <di.wang@whamcloud.com>